# umx 1.5.0
* December 2016 feature release
* IMPROVED: umxRAM returns invisibly
* IMPROVED: umx_aggregate can return a formatted table (kable = TRUE)
* IMPROVED: umxAPA returns lower-triangle of data.frame correlations (by default)
* FIXED: umx_set_plot_format uses silent = TRUE internally where needed

# umx 1.4.9
* December 2016 bug fix
* FIXED: umx_make_TwinData fix bug in DZ moderator code and A+C computation
* IMPROVED: more functionality hints in man page titles

# umx 1.4.5
* November 2016 "Usability is queen/Sincere Pumpkin Patch"
* IMPROVED: Reorganize function families to increase clarity
* IMPROVED: umx_set functions now show legal options by default
* NEW: umx_set functions have silent option
* FIX secure http URLs

# umx 1.4.0
* Mid October 2016 "New features and improvements"
* BUG FIX: umxFitIndices RMR and SRMR (h/t Brenton Wiernik!)
* NEW: umxMatrix with default labels and name as 1st parameter 
* NEW: Definition variable umxPath type, e.g.
  * umxPath(defn = "def", labels = "data.age")
* IMPROVED: More concise feedback
* IMPROVED: umxEquate supports autoRun and compare
* IMPROVED: umx_names can, as a convenience, take string vectors
* RENAME: umxGetOpenMx aliased to install.OpenMx or umx_install_OpenMx
* IMPROVED: umxFitIndices new indices + computes refModels automatically
* IMPROVED: umxRAM remove_unused_manifests no longer updates manifestVars + leaves variable in data by default.
* RENAME: plot() "showFixed" deprecated in favour of easier to type "fixed"

# umx 1.3.0
* R 3.3.1 companion: "Bug in your Hair" August 2016
* NEW: umxPath allows unique.pairs connection
 * Useful for growth curve models
* IMPROVED: umxRAM handles suffix labels
 * Useful for models embedded in multi-group 
* IMPROVED: umxSummary to show parameters from first model in multi-group
 * Begin to support multi-group in umxSummary
* IMPROVED: twin model figures tweaked
* CHANGE showStd= to std= in most remaining cases
 * Might need to update your code!