@@ -26,7 +26,6 @@ export(RMSEA)
 export(dl_from_dropbox)
 export(install.OpenMx)
 export(loadings)
-export(mxSE)
 export(parameters)
 export(qm)
 export(reliability)
