@@ -918,7 +918,7 @@ umxFactor <- function(x = character(), levels= NULL, labels = levels, exclude = 
 				allLevels = allLevels[!is.na(allLevels)] # drop NA if present
 				# z = umxFactor(x = x[,theseNames], levels = allLevels, ordered = T, verbose = T, collapse=FALSE)
 				# z = umxFactor(x = x[,theseNames], levels = allLevels, labels = allLevels, ordered = T, verbose = T)
-				x[, theseNames] = umxFactor(x = x[,theseNames], levels = allLevels, labels = allLevels, exclude = exclude, collapse = collapse, ordered = ordered, verbose = verbose)
+				x[, theseNames] = umxFactor(x = x[, theseNames, drop = FALSE], levels = allLevels, labels = allLevels, exclude = exclude, collapse = collapse, ordered = ordered, verbose = verbose)
 			}
 		} else {
 			for (c in 1:ncols) {
