@@ -30,11 +30,10 @@ loadings(m1)
 \seealso{
 - \code{\link{factanal}}, \code{\link{loadings}}
 
-Other Reporting Functions: \code{\link{mxSE}},
-  \code{\link{umxAPA}}, \code{\link{umxGetParameters}},
-  \code{\link{umxSummary}}, \code{\link{umx_APA_pval}},
-  \code{\link{umx_aggregate}}, \code{\link{umx_print}},
-  \code{\link{umx_show}}, \code{\link{umx_time}},
-  \code{\link{umx}}
+Other Reporting Functions: \code{\link{umxAPA}},
+  \code{\link{umxGetParameters}}, \code{\link{umxSummary}},
+  \code{\link{umx_APA_pval}}, \code{\link{umx_aggregate}},
+  \code{\link{umx_print}}, \code{\link{umx_show}},
+  \code{\link{umx_time}}, \code{\link{umx}}
 }
 
