@@ -27,8 +27,7 @@ View documentation on the GxE model subclass here: \code{\link{umxSummary.MxMode
 }
 \seealso{
 Other Reporting Functions: \code{\link{loadings.MxModel}},
-  \code{\link{mxSE}}, \code{\link{umxAPA}},
-  \code{\link{umxGetParameters}},
+  \code{\link{umxAPA}}, \code{\link{umxGetParameters}},
   \code{\link{umx_APA_pval}}, \code{\link{umx_aggregate}},
   \code{\link{umx_print}}, \code{\link{umx_show}},
   \code{\link{umx_time}}, \code{\link{umx}}
